# LLM_Agri_Bot

./: .env.example  .gitignore  API_DOCS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  EXAMPLES.md  LICENSE  README.md  SECURITY.md  app.py  gunicorn.conf.py  llms.txt  pyproject.toml  render.yaml  requirements.txt  run.py
app/: __init__.py  config.py
app/routes/: __init__.py  chat.py  main.py
app/services/: __init__.py  llm_service.py  memory_service.py  prompt_manager.py  stt_service.py  tts_service.py
app/static/: manifest.webmanifest
app/static/css/: style.css
app/static/js/: chat.js
app/templates/: index.html
templates/: index.html
uploads/: audio.webm
