[project]
name = "llm-agri-bot"
version = "2.0.0"
description = "AI-powered Agricultural Assistant with LangChain, Redis memory, and speech capabilities"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "langchain>=1.3.10",
    "langchain-groq>=1.1.3",
    "redis>=5.2.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
]

[project.urls]
Homepage = "https://github.com/mohammed97ashraf/LLM_Agri_Bot"
